--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
 
     <string name="error_title">Whoops</string>
     <string name="error_action">OK</string>
+    <string name="today">Today</string>
 
 
 </resources>
